# chipcoin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  send_chc_from_miner.sh
apps/browser-wallet/: README.md  build-all.sh  onboarding.html  package-lock.json  package.json  popup.html  settings.html  tsconfig.json  vite.config.ts
config/env/: .env.example
docker/: entrypoint.sh
docker/compose/: docker-compose.devnet-test.yml
docs/: architecture.md  browser-wallet.md  clean-install-checklist.md  devnet-fresh-node-bootstrap-runbook.md  devnet-operator-upgrade-runbook.md  devnet-release-0.1.1.md  devnet-release-checklist.md  distributed-validation.md  docker.md  miner.md  monetary-policy.md  node.md  protocol.md  publication-checklist.md  roadmap.md  setup-wizard.md  system-requirements.md
scripts/: devnet_reorg_test.sh  devnet_smoke_test.sh  devnet_wrong_network_test.sh
scripts/runtime/: down.sh  logs.sh  status.sh  up-detached.sh  up.sh
scripts/setup/: wizard.py
src/chipcoin/: __init__.py  config.py
tests/: __init__.py  helpers.py
tests/config/: test_setup_wizard.py
tests/consensus/: test_economics.py  test_hashes_merkle.py  test_models.py  test_node_registry.py  test_node_rewards.py  test_pow.py  test_serialization.py  test_utxo.py  test_validation.py
tests/crypto/: test_keys_signatures.py  test_placeholders.py
tests/miner/: test_worker.py
tests/node/: __init__.py  test_cli.py  test_codec.py  test_http_api.py  test_local_node.py  test_native_reward_slice.py  test_runtime_duplicate_dialing.py  (+8 more)
(+111 files in other folders)
