[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chipcoin-v2"
version = "0.1.1"
description = "Didactic Bitcoin-inspired peer-to-peer blockchain node"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
chipcoin = "chipcoin.interfaces.cli:main"
chipcoin-http = "chipcoin.interfaces.http_api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
